--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="qunit-fixture"></div>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
-  <script type="Text/javascript" src="jq.compare.js"></script>
+  <script type="Text/javascript" src="jquery.compare.js"></script>
   <script type="text/javascript" src="test.js"></script>
   </body>
 </html>
