--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <title>qUnit tests</title>
-  <link rel="stylesheet" href="../vendor/jquery/qunit.css">
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script type="text/javascript" src="../vendor/jquery/jquery-2.0.min.js"></script>
-  <script type="text/javascript" src="../vendor/jquery/qunit.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
   <script type="Text/javascript" src="jquery.compare.js"></script>
   <script type="text/javascript" src="test.js"></script>
   </body>
